nov 16 - 7:03 - updated tutorial 2

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,10 +258,12 @@ pre {
 
 .slider li {
     position: absolute; 
+/*
     top: 0px; 
     left: 0px; 
     right: 0px; 
     bottom: 0px; 
+*/
 }
 
 .dots {
