--- a/styles/styles.css
+++ b/styles/styles.css
@@ -470,7 +470,8 @@ pre {
         text-transform: uppercase;
         letter-spacing: 2px;
         padding-bottom: 2px;
-        border-bottom: 2px solid burlywood;        
+        border-bottom: 2px solid burlywood;  
+        cursor: pointer;
     }
     
     .site-nav-bar {
