--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@ header {
 }
 
 header h1 {
+    flex: 1;
     font-family: 'Bungee', cursive;
     letter-spacing: 3px;
     font-size: 20px;
@@ -218,10 +219,6 @@ pre {
 
 /* TUTORIAL 02 */
 
-.tutorial-02-show-03 {
-    padding-bottom: 55.6%;
-}
-
 .slide-show {
     width: 100%;
 }
@@ -366,8 +363,13 @@ pre {
     border-top: 2px solid #e4c69f; /* burlywoods */
     padding: 30px;
     width: 100%;
-/*    height: 100vh;*/
     flex: 1;
+}
+
+.tell > h1 > span { 
+  margin-top: -104px;        
+  padding-bottom: 104px; 
+  display: block; 
 }
 
 .tell h1 {
@@ -407,13 +409,7 @@ pre {
 .tell a:hover {
     background-color: rgba(95,158,160,.2);
 }
-
-.tell code {
-    margin: 20px 0;
 }
-
-
-
 
 /* --- END GENERAL STYLES --- */
 
@@ -437,6 +433,10 @@ pre {
 }    
 
 @media only screen and (max-width: 1340px) {
+    
+    .tutorial-02-show-03 {
+    padding-bottom: 55.6%;
+    }
     
     /* HEADER STYLES */
     
